# skipper-ai-assistant

./: .gitignore  CONTEXT.md  README.md  pyproject.toml  requirements.txt
data/polars/: Class40_2022_1deg.csv  class40-2021.csv  polaires_class40_2022.csv  polaires_class40_2022_vmg.csv
data/runs/onboard_test/: analysis.json  data.csv  explanation.txt
data/runs/test_run/: analysis.json  data.csv  explanation.txt
models/: performance_model.joblib
src/skipper_ai/: __init__.py  analyze.py  cli.py  explain.py  generate_synthetic.py  ingest.py  polars.py  report.py  train.py
src/skipper_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_pipeline.py  test_report.py
