[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skipper-ai"
version = "0.1.0"
description = "AI-powered sailing performance assistant"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "xgboost",
    "joblib",
    "shap",
    "gpxpy",
    "matplotlib",
    "click",
    "ollama"
]

[project.scripts]
skipper-ai = "skipper_ai.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]